--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,7 +38,7 @@ dependencies:
   carousel_slider: ^4.2.1
   provider: ^6.1.2
   in_app_purchase: ^3.2.0
-
+  flutter_inapp_purchase: ^5.6.1
 
 dev_dependencies:
   flutter_test:
