--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,9 @@ dependencies:
   in_app_purchase: ^3.2.0
   flutter_inapp_purchase: ^5.6.1
   sqflite: ^2.3.3
+  google_fonts: ^6.2.1
+  flutter_svg: ^2.0.10+1
+  flutter_shakemywidget: ^1.0.5+1
 
 dev_dependencies:
   flutter_test:
@@ -67,6 +70,8 @@ flutter:
   # assets:
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
+  assets:
+    - assets/images/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
@@ -91,5 +96,9 @@ flutter:
   #       - asset: fonts/TrajanPro_Bold.ttf
   #         weight: 700
   #
+  fonts:
+    - family: Ambition & Ink
+      fonts:
+        - asset: assets/fonts/Ambition & Ink Regular.ttf
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/custom-fonts/#from-packages
